fixed dots overflow on small screens

--- a/src/popup/components/Authentication/UpgradeScreen/upgrade-screen.pcss
+++ b/src/popup/components/Authentication/UpgradeScreen/upgrade-screen.pcss
@@ -12,7 +12,8 @@
     }
 
     &__head {
-        padding-bottom: 70px;
+        flex: 1 1 auto;
+        padding-bottom: 16px;
     }
 
     &__title {
@@ -26,7 +27,7 @@
     &__slider {
         width: 100%;
         max-width: 320px;
-        padding: 0 16px;
+        padding: 0 16px 16px;
 
         .slider__info {
             /* To eliminate jumping dots effect we set size of slider text at min 3 lines: */
